# my_EvoSkill

./: .gitignore  README.md  environment.yml  pyproject.toml  pytest.ini
config/: llm.example.yaml
doc/: architecture.md  dataset_split_and_validation.md  dev_environment.md  distillation_and_feedback.md  doc_sync_policy.md  executor_adapter_spec.md  first_task_cars_spectroscopy.md  harness_design.md  judge_and_security.md  model_provider_spec.md  runtime_and_env_cache.md  skill_registry_spec.md  task_bundle_spec.md  task_registration.md  testing_and_logging.md
scripts/: create_dev_env.sh  print_env_info.py  probe_llm_gateways.py  register_task.sh  run_cars_spectroscopy_live.py  run_smoke_three.sh  run_task.sh  run_task_live.py  run_task_live.sh  run_task_register.sh  run_tests.sh  setup_env.sh  setup_task_env.sh  visualize_eht_black_hole_feature_extraction_dynamic_workspaces.py  visualize_selected_task_comparisons.py  visualize_selected_task_comparisons_native.py
tests/: conftest.py  test_agent_spec.py  test_cli_model_provider.py  test_cli_module_wrappers.py  test_compiler.py  test_datasets.py  test_doc_sync.py  test_envs.py  test_executor.py  test_feedback.py  test_harness_components.py  test_integration_pipeline.py  test_judge_bridge_python.py  test_judging.py  test_live_runner.py  test_logging_utils.py  test_manifest_bootstrap.py  test_model_provider.py  test_packaging.py  test_plan_history.py  test_probe_llm_gateways.py  test_process_cleanup.py  test_proxy.py  test_readme_sanitizer.py  test_registration.py  test_registry.py  test_runtime_info.py  test_task_env.py  (+7 more)
(+165 files in other folders)
